fix hash scroll postion error & dark mode display

--- a/website/src/components/Autoapi/styles/index.scss
+++ b/website/src/components/Autoapi/styles/index.scss
@@ -893,7 +893,7 @@
     visibility: visible;
   }
   dt:target {
-    background-color: var(--ifm-color-gray-200);
+    scroll-margin-top: 80px;
   }
   .rst-current-version {
     .dropdown {
